<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- 在menu中嵌套了一个group-->
    <group android:checkableBehavior="single"><!--single表示所有菜单只能单选 -->
        <item
            android:id="@+id/nav_changeIcon"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_nav_image"/>
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/nav_friends"
            android:title="@string/menu_nav_password"/>
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_exit"
            android:title="更换账号"/>
        <item
            android:id="@+id/nav_task"
            android:icon="@drawable/nav_task"
            android:title="@string/menu_nav_course"/>

    </group>
</menu>