<?xml version="1.0" encoding="utf-8" ?>
<!-- 添加活动界面 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@android:style/Theme.Holo.Light"
    tools:ignore="LabelFor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_theme"
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/text_theme" />

        <EditText
            android:id="@+id/edit_text_theme"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:importantForAutofill="no"
            android:inputType="text"
            tools:targetApi="o" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/text_address" />

        <EditText
            android:id="@+id/edit_text_address"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:autofillHints=""
            android:inputType="text"
            tools:targetApi="o" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="111dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center"
            android:text="@string/text_content" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints=""
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="95dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="89dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/date_text" />

        <DatePicker
            android:id="@+id/datePicker1"
            android:layout_width="290dp"
            android:layout_height="match_parent"
            android:calendarViewShown="false" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="360dp"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/button_cancel" />

        <Button
            android:id="@+id/button_add"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/button_add" />
    </LinearLayout>

</LinearLayout>